--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Transform Your <span>Vision</span> Into Motion With <span>G² Edits</span></h1>
+            <h1>Transform Your Vision Into Motion With <h1><span>G² Edits</span></h1></h1>
             <p>Professional video editing that tells your story. Fast turnaround, exceptional quality, and creative excellence delivered every time.</p>
             <button class="cta-button">Start Your Project</button>
         </div>
@@ -685,3 +685,4 @@
     </footer>
 </body>
 </html>
+
