--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,7 @@
                 <a href="tel:7859990133" class="contact-icon"><i class="fas fa-phone"></i><span>Call Us</span></a>
                 <a href="mailto:g.square.edits@hotmail.com" class="contact-icon"><i
                         class="fas fa-envelope"></i><span>Email</span></a>
+                        
             </div>
         </div>
     </section>
@@ -1113,12 +1114,10 @@
                     </div>
                     <p>Transforming visions into captivating visual stories through professional video editing and
                         post-production services.</p>
-                    <div class="social-links">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    <!-- <div class="social-links">
+                        <a href="https://www.instagram.com/g_square__edits?utm_source=qr&igsh=MXd2Ynprd2NtZnB1bw=="><i class="fab fa-instagram"></i></a>
+                        
+                    </div> -->
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
